[package]
name    = "api-navigator"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos                   = { version = "0.8", features = ["csr"] }
leptos-column-browser    = { path = "../.." }
log                      = "0.4"
console_log              = "1"
console_error_panic_hook = "0.1"
wasm-bindgen             = "=0.2.117"
